session19-cloud-terraform-in-action/ec2.tf
# Fetch latest Amazon Linux 2023 AMI dynamically
data "aws_ami" "amazon_linux_2023" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-2023.*-x86_64"]
  }
}

# Web Server EC2 Instance
resource "aws_instance" "web" {
  ami                         = data.aws_ami.amazon_linux_2023.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              dnf update -y
              dnf install -y nginx
              systemctl start nginx
              systemctl enable nginx
              echo "<h1>Cloud Infrastructure Provisioned by Terraform - Hitarth Jain (24BCS10399)</h1>" > /usr/share/nginx/html/index.html
              EOF

  tags = {
    Name = "${var.environment}-web-instance"
  }
}
